Fix AI client connection issues and improve restaurant selection prompts
- Fixed LangChain Ollama client connection failures by implementing direct Ollama client fallback
- Fixed Orchestrator agent configuration error (self.configuration -> self.config)
- Updated User Twin agent system prompt to be specific about restaurant selection
- Modified scenario prompts to request only restaurant names, not verbose responses
- Updated fallback responses to be direct and concise
- All agents now working with AI client for intelligent restaurant selection
- User Twin agent correctly selects restaurants based on food preferences
- End-to-end functionality working: 'crispy fries' -> 'Burger Barn' correctly

--- a/safehive/mcp/mcp_config.yaml
+++ b/safehive/mcp/mcp_config.yaml
@@ -4,7 +4,7 @@
 # MCP Server Configuration
 mcp_server:
   # Path to the compiled MCP server
-  path: "/Users/rutujanemane/Documents/SJSU/A10 hackathon/DoorDash-MCP-Server/build/index.js"
+  path: "/Users/puneetbajaj/Desktop/playground/DoorDash-MCP-Server/build/index.js"
   
   # Environment settings
   environment: "sandbox"  # "sandbox" or "production"
